--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Virtuo is a modern personal portfolio template for designers, developers, content writer, cleaner, programmer, fashion designer, model, Influencer and freelancers. Fully responsive, SEO-friendly, Bootstrap and easy to customize.">
+    <meta name="description" content="Carl's Website">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
     <title>Carlton's Portfolio </title>
     <!-- Bootstrap min css -->
